# template_repo

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  renovate.json
.aspect/cli/: config.yaml
.devcontainer/: .bashrc  Dockerfile  bazel_completion.bash  devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yml
example/cpp/: BUILD.bazel  hello_world.cpp
example/python/: BUILD.bazel  hello_world.py  py_talker.py
tools/: BUILD.bazel
tools/lint/: .clang-tidy  BUILD.bazel  clang_format_fix_run.sh  clang_format_run.sh  clang_tidy_run.sh  linters.bzl  ruff.bzl  setup_clang_env.sh
tools/ros2/: BUILD.bazel
utils/: BUILD.bazel
utils/python/: requirements_lock.txt
