"""aliases for faster access to tools"""

alias(
    name = "ruff",
    actual = "//tools:ruff",
    visibility = ["//visibility:public"],
)

alias(
    name = "buildifier_check",
    actual = "//tools:buildifier_check",
    visibility = ["//visibility:public"],
)

alias(
    name = "buildifier_fix",
    actual = "//tools:buildifier_fix",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_tidy",
    actual = "//tools/lint:clang_tidy_check",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_format_check",
    actual = "//tools/lint:clang_format_check",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_format_fix",
    actual = "//tools/lint:clang_format_fix",
    visibility = ["//visibility:public"],
)
