module(
    name = "template_repo",
    version = "0.1.0",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_python", version = "1.5.3")

## Python specific configs

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # We can specify the exact version.
    python_version = "3.12.3",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.12.3",
    requirements_lock = "//utils/python:requirements_lock.txt",
)
use_repo(pip, "py_deps")
