module(
    name = "template_repo",
    version = "0.1.0",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "aspect_rules_lint", version = "1.9.0")

## Python specific configs
PYTHON_VERSION = "3.12.3"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # We can specify the exact version.
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//utils/python:requirements_lock.txt",
)
use_repo(pip, "py_deps")
