load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "ruff",
    srcs = ["@ruff-linux//:ruff"],
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier_check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier_fix",
    visibility = ["//visibility:public"],
)
