load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "hello_world_py",
    srcs = ["hello_world.py"],
    main = "hello_world.py",
    deps = [
        ":deps",
        "@py_deps//numpy",
    ],
)

py_binary(
    name = "py_talker",
    srcs = ["py_talker.py"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

py_library(
    name = "deps",
    srcs = glob(["**/*.py"]),
)
