load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "clang_tidy_check",
    srcs = ["clang_tidy_run.sh"],
    visibility = ["//visibility:public"],
)
sh_binary(
    name = "clang_format_check",
    srcs = ["clang_format_run.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "clang_format_fix",
    srcs = ["clang_format_fix_run.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "setup_clangd",
    srcs = ["setup_clang_env.sh"],
    visibility = ["//visibility:public"],
)
