load("@com_github_mvukov_rules_ros2//ros2:bag.bzl", "ros2_bag")
load("@com_github_mvukov_rules_ros2//ros2:topic.bzl", "ros2_topic")

ros2_bag(
    name = "bag",
    idl_deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:rcl_interfaces",
        "@ros2_rosbag2//:rosbag2_interfaces",
    ],
    visibility = ["//visibility:public"],
)

ros2_topic(
    name = "topic",
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
    ],
)
